config: enable mtd-rw for qihoo-360t7
 * Enable mtd-rw for qihoo-360t7
 * Remove unused config file '.config'

--- a/qihoo-360t7.config
+++ b/qihoo-360t7.config
@@ -3878,7 +3878,7 @@ CONFIG_PACKAGE_kmod-tun=y
 # CONFIG_PACKAGE_kmod-mhi-bus is not set
 # CONFIG_PACKAGE_kmod-mhi-pci-generic is not set
 # CONFIG_PACKAGE_kmod-mmc is not set
-# CONFIG_PACKAGE_kmod-mtd-rw is not set
+CONFIG_PACKAGE_kmod-mtd-rw=y
 # CONFIG_PACKAGE_kmod-mtdoops is not set
 # CONFIG_PACKAGE_kmod-mtdram is not set
 # CONFIG_PACKAGE_kmod-mtdtests is not set
@@ -3907,7 +3907,7 @@ CONFIG_PACKAGE_kmod-zram=y
 CONFIG_ZRAM_DEF_COMP_LZORLE=y
 # CONFIG_ZRAM_DEF_COMP_LZO is not set
 # CONFIG_ZRAM_DEF_COMP_LZ4 is not set
-# CONFIG_ZRAM_DEF_COMP_LZ4HC is not set
+CONFIG_ZRAM_DEF_COMP_LZ4HC=y
 # CONFIG_ZRAM_DEF_COMP_ZSTD is not set
 # end of Other modules
 
