--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -1,3 +1,4 @@
+
 #
 # Automatically generated file; DO NOT EDIT.
 # ImmortalWrt Configuration
@@ -6063,7 +6064,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
 # CONFIG_PACKAGE_luci-app-cjdns is not set
 # CONFIG_PACKAGE_luci-app-clamav is not set
-CONFIG_PACKAGE_luci-app-cloudflared=y
+#CONFIG_PACKAGE_luci-app-cloudflared=y
 # CONFIG_PACKAGE_luci-app-commands is not set
 # CONFIG_PACKAGE_luci-app-coovachilli is not set
 # CONFIG_PACKAGE_luci-app-cpe is not set
@@ -6102,6 +6103,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-hd-idle is not set
 # CONFIG_PACKAGE_luci-app-hnet is not set
 # CONFIG_PACKAGE_luci-app-homeproxy is not set
+CONFIG_PACKAGE_luci-app-homeproxy=y
 # CONFIG_PACKAGE_luci-app-https-dns-proxy is not set
 # CONFIG_PACKAGE_luci-app-hypermodem is not set
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
@@ -6385,7 +6387,7 @@ CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-cloudflared-uk is not set
 # CONFIG_PACKAGE_luci-i18n-cloudflared-vi is not set
 # CONFIG_PACKAGE_luci-i18n-cloudflared-yua is not set
-CONFIG_PACKAGE_luci-i18n-cloudflared-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-cloudflared-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-cloudflared-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-eqos-mtk-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-ar is not set
@@ -7328,6 +7330,7 @@ CONFIG_PCAP_DNSPROXY_LISTENPORT=1053
 # CONFIG_PACKAGE_igmpproxy is not set
 CONFIG_PACKAGE_ip-bridge=y
 # CONFIG_PACKAGE_ip-full is not set
+CONFIG_PACKAGE_ip-full=y
 # CONFIG_PACKAGE_ip-tiny is not set
 # CONFIG_PACKAGE_lldpd is not set
 # CONFIG_PACKAGE_mrmctl is not set
@@ -7571,7 +7574,7 @@ CONFIG_PACKAGE_wrtbwmon=y
 # CONFIG_PACKAGE_brook is not set
 CONFIG_PACKAGE_cgi-io=y
 # CONFIG_PACKAGE_clamav is not set
-CONFIG_PACKAGE_cloudflared=y
+#CONFIG_PACKAGE_cloudflared=y
 # CONFIG_PACKAGE_dufs is not set
 # CONFIG_PACKAGE_etebase is not set
 # CONFIG_PACKAGE_freshclam is not set
